--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,11 @@ sphinxcontrib-serializinghtml==1.1.3
 urllib3==1.25.7
 wcwidth==0.1.7
 Werkzeug==0.16.0
+
+google~=2.0.3
+furl~=2.1.0
+pika~=1.1.0
+Pillow~=7.1.1
+numpy~=1.18.2
+matplotlib~=3.2.1
+setuptools~=41.2.0
