--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,116 @@ services:
       - brainsreamer-net
     ports:
       - "5672:5672"
-	
-  base:
+
+
+  server:
+    depends_on:
+      - mq
     build:
       context: .
-      dockerfile: ./docker-files/Dockerfile-base
+      dockerfile: ./dockerfiles/Dockerfile-server
+    restart: on-failure
     networks:
       - brainsreamer-net
+    ports:
+      - "8000:8000"
+    volumes:
+      - ~/brainsreamer_data:/var/data/brainsreamer_data
 
+  pose-parser:
+    depends_on:
+      - mq
+    build:
+      context: .
+      dockerfile: ./dockerfiles/Dockerfile-parsers
+    restart: on-failure
+    networks:
+      - brainsreamer-net
+    environment:
+      - PARSER=pose
+    volumes:
+      - ~/brainsreamer_data:/var/data/brainsreamer_data
 
+  feelings-parser:
+    depends_on:
+      - mq
+    build:
+      context: .
+      dockerfile: ./dockerfiles/Dockerfile-parsers
+    restart: on-failure
+    networks:
+      - brainsreamer-net
+    environment:
+      - PARSER=feelings
+    volumes:
+      - ~/brainsreamer_data:/var/data/brainsreamer_data
+
+  depth-image-parser:
+    depends_on:
+      - mq
+    build:
+      context: .
+      dockerfile: ./dockerfiles/Dockerfile-parsers
+    restart: on-failure
+    networks:
+      - brainsreamer-net
+    environment:
+      - PARSER=depth_image
+    volumes:
+      - ~/brainsreamer_data:/var/data/brainsreamer_data
+
+  color-image-parser:
+    depends_on:
+      - mq
+    build:
+      context: .
+      dockerfile: ./dockerfiles/Dockerfile-parsers
+    restart: on-failure
+    networks:
+      - brainsreamer-net
+    environment:
+      - PARSER=color_image
+    volumes:
+      - ~/brainsreamer_data:/var/data/brainsreamer_data
+
+  saver:
+    depends_on:
+      - mq
+      - db
+    build:
+      context: .
+      dockerfile: ./dockerfiles/Dockerfile-saver
+    restart: on-failure
+    networks:
+      - brainsreamer-net
+    volumes:
+      - ~/brainsreamer_data:/var/data/brainsreamer_data
+
+  api:
+    depends_on:
+      - db
+    build:
+      context: .
+      dockerfile: ./dockerfiles/Dockerfile-api
+    restart: on-failure
+    networks:
+      - brainsreamer-net
+    ports:
+      - "5000:5000"
+    volumes:
+      - ~/brainsreamer_data:/var/data/brainsreamer_data
+
+  gui:
+    depends_on:
+      - api
+    build:
+      context: .
+      dockerfile: ./dockerfiles/Dockerfile-gui
+    restart: on-failure
+    networks:
+      - brainsreamer-net
+    ports:
+      - "8080:8080"
 
 
 networks:
